--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+.text-center a {
+  color: #007bff;
+  font-weight: 500;
+}
+
+.text-center a:hover {
+  text-decoration: underline !important;
+}
